# vagrant-actix-sqlx

./: README.md  Vagrantfile  docker-compose.yml  docker-compose_1.yml  playbook.yml
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  box_meta  id  index_uuid  private_key  synced_folders  vagrant_cwd
actix-sqlx/: Cargo.toml  Dockerfile  README.md  config.yml
actix-sqlx/src/: config.rs  main.rs  services.rs
cfg/: config.sh
postgres/: Dockerfile
postgres/scripts/: create_database.sh
postgres/sql/: create_tables.sql
