[package]
name = "actix-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
log = "0.4.17"
env_logger = "0.9.3"
dotenvy = "0.15.6"
actix = "0.13.0"
actix-web = "4.2.1"
serde = { version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
serde_yaml = "0.9.14"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres"] }
